--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -9,69 +9,60 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <parent>
-    <groupId>net.wasdev.wlp.maven.parent</groupId>
-    <artifactId>liberty-maven-app-parent</artifactId>
-    <version>2.6.1</version>
-  </parent>
-    
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <app.name>LibertyProject</app.name>
-    <testServerHttpPort>9080</testServerHttpPort>
-    <testServerHttpsPort>9443</testServerHttpsPort>
-    <package.file>${project.build.directory}/${app.name}.zip</package.file>
-    <packaging.type>usr</packaging.type>
-    <skipTests>false</skipTests>
+    <!-- Plugin versions -->
+    <version.liberty-maven-plugin>3.1</version.liberty-maven-plugin>
+    <version.maven-failsafe-plugin>2.22.2</version.maven-failsafe-plugin>
+    <version.maven-surefire-plugin>2.22.2</version.maven-surefire-plugin>
+    <!-- Liberty configuration -->
+    <liberty.var.default.http.port>9080</liberty.var.default.http.port>
+    <liberty.var.default.https.port>9443</liberty.var.default.https.port>
+    <liberty.var.app.context.root>/</liberty.var.app.context.root>
   </properties>
 
   <dependencies>
+    <!-- Dependencies -->
     <dependency>
       <groupId>org.eclipse.microprofile</groupId>
       <artifactId>microprofile</artifactId>
-      <version>2.0.1</version>
+      <version>3.2</version>
       <type>pom</type>
       <scope>provided</scope>
     </dependency>
-    <!-- dependencies for tests -->
+    <!-- Dependencies for tests -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.5.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-rs-client</artifactId>
-      <version>3.1.11</version>
+      <version>3.3.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.cxf</groupId>
       <artifactId>cxf-rt-rs-extension-providers</artifactId>
-      <version>3.1.11</version>
+      <version>3.3.4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.glassfish</groupId>
       <artifactId>javax.json</artifactId>
-      <version>1.0.4</version>
+      <version>1.1.4</version>
       <scope>test</scope>
     </dependency>
+    <!-- Support for JDK 9 and above -->
     <dependency>
-      <groupId>javax.json.bind</groupId>
-      <artifactId>javax.json.bind-api</artifactId>
-      <version>1.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse</groupId>
-      <artifactId>yasson</artifactId>
-      <version>1.0</version>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -79,89 +70,26 @@
   <build>
     <finalName>${project.artifactId}</finalName>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-          <packagingExcludes>pom.xml</packagingExcludes>
-        </configuration>
-      </plugin>
-      <!-- Plugin to run unit tests -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <executions>
-          <execution>
-            <phase>test</phase>
-            <id>default-test</id>
-            <configuration>
-              <excludes>
-                <exclude>**/it/**</exclude>
-              </excludes>
-              <reportsDirectory>${project.build.directory}/test-reports/unit</reportsDirectory>
-            </configuration>
-          </execution>
-        </executions>
-        <configuration>
-          <skipTests>${skipTests}</skipTests>
-        </configuration>
-      </plugin>
       <!-- Enable liberty-maven plugin -->
       <plugin>
-        <groupId>net.wasdev.wlp.maven.plugins</groupId>
+        <groupId>io.openliberty.tools</groupId>
         <artifactId>liberty-maven-plugin</artifactId>
-        <version>2.0</version>
+        <version>${version.liberty-maven-plugin}</version>
         <configuration>
-          <assemblyArtifact>
-            <groupId>io.openliberty</groupId>
-            <artifactId>openliberty-runtime</artifactId>
-            <version>RELEASE</version>
-            <type>zip</type>
-          </assemblyArtifact>
           <serverName>sampleAppServer</serverName>
-          <configFile>src/main/liberty/config/server.xml</configFile>
-          <packageFile>${package.file}</packageFile>
-          <include>${packaging.type}</include>
-          <bootstrapProperties>
-            <default.http.port>${testServerHttpPort}</default.http.port>
-            <default.https.port>${testServerHttpsPort}</default.https.port>
-          </bootstrapProperties>
         </configuration>
       </plugin>
       <!-- Plugin to run functional tests -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.18.1</version>
-        <executions>
-          <execution>
-            <phase>integration-test</phase>
-            <id>integration-test</id>
-            <goals>
-              <goal>integration-test</goal>
-            </goals>
-            <configuration>
-              <includes>
-                <include>**/it/**</include>
-              </includes>
-              <systemPropertyVariables>
-                <liberty.test.port>${testServerHttpPort}</liberty.test.port>
-              </systemPropertyVariables>
-            </configuration>
-          </execution>
-          <execution>
-            <id>verify-results</id>
-            <goals>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
+        <version>${version.maven-failsafe-plugin}</version>
         <configuration>
-          <summaryFile>${project.build.directory}/test-reports/it/failsafe-summary.xml</summaryFile>
-          <reportsDirectory>${project.build.directory}/test-reports/it</reportsDirectory>
+          <systemPropertyVariables>
+            <http.port>${liberty.var.default.http.port}</http.port>
+            <https.port>${liberty.var.default.https.port}</https.port>
+            <app.context.root>${liberty.var.app.context.root}</app.context.root>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
     </plugins>
